# luau-fmt

./: Cargo.toml  README.md  configuration.md
src/: config.rs  lib.rs  main.rs  traits.rs
src/cli/: mod.rs
src/config/: compact_table.rs  function_parenthesis.rs  indent_style.rs  mod.rs  naming_convention.rs  newline_style.rs  quote_style.rs  semicolon.rs  trailing_commas.rs
src/formatter/: bracketed.rs  comment.rs  expression.rs  functions.rs  list.rs  local_assignment.rs  macros.rs  mod.rs  name.rs  set_expressions.rs  statement.rs  token.rs  trivia.rs  type_definition.rs
src/formatter/block/: comment.rs  do_block.rs  function.rs  generic_for.rs  get_block_type.rs  get_trailing_trivia.rs  if_statement.rs  local_assignment.rs  mod.rs  numerical_for.rs  repeat_block.rs  set_expressions.rs  statement.rs  type_definition.rs  while_loop.rs
src/formatter/blocks/: do_block.rs  generic_for.rs  if_statement.rs  mod.rs  numerical_for.rs  repeat_block.rs  while_loop.rs
src/formatter/expression/: expanding.rs  folding.rs  function.rs  mod.rs  table.rs  var.rs
src/formatter/value/: table.rs
src/macros/: mod.rs
src/types/: config.rs  mod.rs
