[package]
name = "luau-fmt"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["luau", "formatter"]

documentation = "https://docs.rs/luau-lexer"
repository = "https://github.com/msix29/luau-lexer"
homepage = "https://github.com/msix29/luau-lexer"

[dependencies]
clap = { version = "4.5.37", features = ["derive"], optional = true }
luau-parser = "0.2.65"
serde = { version = "1.0.219", features = ["derive"] }
toml = { version = "0.8.20", optional = true }

[features]
config-loading = ["dep:clap", "dep:toml"]
async = ["luau-parser/async"]

[[bin]]
name = "luaufmt"
path = "src/main.rs"
required-features = ["config-loading"]
